Fix more unreleased dark mode contrast bugs (#45295)

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -453,7 +453,7 @@ $shadow-transition-width: 16px;
           }
         }
         .grey-cell {
-          color: $ui-fleet-black-50;
+          color: $ui-fleet-black-75;
         }
       }
 
