--- a/frontend/styles/var/colors.scss
+++ b/frontend/styles/var/colors.scss
@@ -143,10 +143,10 @@ body.dark-mode {
   --ui-gray: #32363e;
   --ui-light-grey: #1e2128;
   --ui-off-white: #1e2128;
-  --ui-shadow: #32363e;
+  --ui-shadow: #000000;
   --ui-vibrant-blue-50: rgba(123, 121, 255, 0.3);
   --ui-vibrant-blue-25: #282736;
-  --ui-vibrant-blue-10: #2c2f37;
+  --ui-vibrant-blue-10: #2d2e4d;
   --tooltip-bg: #353940;
 
   // Notifications & status — slightly brighter
